# KMCode

./: CMakeLists.txt  README.md
include/: kmcode.h  kmcode.hpp
src/: kmcode.cpp
